Added more detail regarding file watchers